<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiPlayScreenActivity"
    android:background="@color/colorPrimary">


    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="242dp" />

    <Button
        android:id="@+id/pallet_one"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:text="@string/button_x"
        android:textColor="@color/colorSecondary"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/pallet_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/pallet_two"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:text="@string/button_o"
        android:textColor="@color/onPrimary"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/pallet_five"
        app:layout_constraintEnd_toStartOf="@+id/pallet_three"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toEndOf="@+id/pallet_one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/pallet_three"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:text="@string/button_x"
        android:textColor="@color/colorSecondary"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/pallet_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/pallet_four"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:text="@string/button_x"
        android:textColor="@color/colorSecondary"
        android:textSize="46sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pallet_five"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:text="@string/button_x"
        android:textColor="@color/colorSecondary"
        android:textSize="46sp"
        app:layout_constraintEnd_toStartOf="@+id/pallet_six"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/pallet_four"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pallet_six"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:text="@string/button_o"
        android:textColor="@color/onPrimary"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pallet_seven"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:text="@string/button_o"
        android:textColor="@color/onPrimary"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pallet_four"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/pallet_eight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:text="@string/button_o"
        android:textColor="@color/onPrimary"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pallet_nine"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/pallet_seven"
        app:layout_constraintTop_toBottomOf="@+id/pallet_five"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/pallet_nine"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg"
        android:fontFamily="serif-monospace"
        android:text="@string/button_x"
        android:textColor="@color/colorSecondary"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pallet_six"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/games_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/games_text"
        android:textColor="@color/onPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/wins_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/wins_text"
        android:textColor="@color/onPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/games_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/loses_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/loses_text"
        android:textColor="@color/onPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wins_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/ties_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif-monospace"
        android:text="@string/ties_text"
        android:textColor="@color/onPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/loses_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/games_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif-monospace"
        android:text="0"
        android:textColor="@color/onPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/games_id"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/wins_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif-monospace"
        android:text="0"
        android:textColor="@color/onPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/games_score"
        app:layout_constraintTop_toBottomOf="@+id/wins_id"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loses_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif-monospace"
        android:text="0"
        android:textColor="@color/onPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wins_score"
        app:layout_constraintTop_toBottomOf="@+id/loses_id"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/ties_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif-monospace"
        android:text="0"
        android:textColor="@color/onPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/loses_score"
        app:layout_constraintTop_toBottomOf="@+id/ties_id"
        app:layout_constraintVertical_bias="0.063" />

</android.support.constraint.ConstraintLayout>